--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -11,13 +11,18 @@ ru:
       unauthenticated: "Для доступа к этой странице необходимо войти в систему."
       unconfirmed: "Вы должны подтвердить свою почту перед входом."
 
-ru:
   activerecord:
     attributes:
       user:
         email: "Электронная почта"
         password: "Пароль"
         password_confirmation: "Подтверждение пароля"
+    errors:
+      models:
+        user:
+          attributes:
+            email:
+              taken: "уже используется"
 
   errors:
     format: "%{attribute} %{message}"
@@ -25,3 +30,8 @@ ru:
       confirmation: "не совпадает"
       too_short: "слишком короткий (не менее %{count} символов)"
       not_found_in_database: "неправильное имя пользователя или пароль"
+      taken: "уже используется"
+
+  time:
+    formats:
+      long: "%d.%m.%Y %H:%M"
